adding music file
this is my music page

--- a/music.html
+++ b/music.html
@@ -13,7 +13,7 @@
     <li><a href="index.html">Resume</a></li>
     <li><a href="music.html">Music Preferences</a></li>
     <li><a href="about_me.html">About Me</a></li>
-    <li><a href="map.html">Map</a></li>
+    <li><a href="map.html" class="active">Map</a></li>
   </ul>
   
   <section>
