adding music file
this is my music page

--- a/music.html
+++ b/music.html
@@ -18,7 +18,7 @@
   
   <section>
     <h1>My Music Preferences</h1>
-    <p>Music plays an important role in my life. I listen to music **every day** no matter where or what I'm doing. Below are some of my favorite genres and artists.</p>
+    <p>Music plays an important role in my life. I listen to music every day no matter where or what I'm doing. Below are some of my favorite genres and artists.</p>
   </section>
 
   <section>
