--- a/map.html
+++ b/map.html
@@ -28,17 +28,17 @@
   </section>
 
   <section class="slideshow">
-    <h1>McCormick Student Village</h1>
-    <div class="slider-container">
-        <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
-        <ul class="slider">
-            <li class="slide"><img src="images/msv.jpg" alt="The main entrance to MSV"></li>
-            <li class="slide"><img src="images/msv2.jpg" alt="The front lawn of MSV"></li>
-            <li class="slide"><img src="images/fowler.jpg" alt="Fowler Hall of MSV"></li>
-        </ul>
-        <button class="next" onclick="changeSlide(1)">&#10095;</button>
-    </div>
-</section>
+  <h1>McCormick Student Village</h1>
+  <div class="slider-container">
+    <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
+    <ul class="slider">
+      <li class="slide active"><img src="images/msv.jpg" alt="The main entrance to MSV"></li>
+      <li class="slide"><img src="images/msv2.jpg" alt="The front lawn of MSV"></li>
+      <li class="slide"><img src="images/fowler.jpg" alt="Fowler Hall of MSV"></li>
+    </ul>
+    <button class="next" onclick="changeSlide(1)">&#10095;</button>
+  </div>
+  </section>
 
   <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIWGeBWMq1N3gGBBltdTBS1D953KC2S0o&callback=initMap"></script>
   <script>
