adding music file
this is my music page

--- a/music.html
+++ b/music.html
@@ -15,7 +15,7 @@
     <li><a href="about_me.html">About Me</a></li>
     <li><a href="map.html" class="active">Map</a></li>
   </ul>
-  
+
   <section>
     <h1>My Music Preferences</h1>
     <p>Music plays an important role in my life. I listen to music every day no matter where or what I'm doing. Below are some of my favorite genres and artists.</p>
@@ -35,17 +35,25 @@
   <section>
     <h2>Favorite Artists/Bands</h2>
     
-    <h3>NewJeans</h3>
-    <img class="image" src="images/newjeans.jpeg" alt="A group photo of the band NewJeans.">
+    <section>
+      <h3>NewJeans</h3>
+      <img class="image" src="images/newjeans.jpeg" alt="A group photo of the band NewJeans.">
+    </section>
 
-    <h3>Chase Atlantic</h3>
-    <img class="image" src="images/chaseatlantic.jpeg" alt="A group photo of Chase Atlantic.">
+    <section>
+      <h3>Chase Atlantic</h3>
+      <img class="image" src="images/chaseatlantic.jpeg" alt="A group photo of Chase Atlantic.">
+    </section>
 
-    <h3>Dro Kenji</h3>
-    <img class="image" src="images/drokenji.jpg" alt="Picture of the artist Dro Kenji.">
+    <section>
+      <h3>Dro Kenji</h3>
+      <img class="image" src="images/drokenji.jpg" alt="Picture of the artist Dro Kenji.">
+    </section>
 
-    <h3>System Of A Down</h3>
-    <img class="image" src="images/systemofadown.jpeg" alt="A photo of the band System Of A Down.">
+    <section>
+      <h3>System Of A Down</h3>
+      <img class="image" src="images/systemofadown.jpeg" alt="A photo of the band System Of A Down.">
+    </section>
   </section>
 
   <section>
