adding map file
this is my map page 

this is my slideshow page

--- a/map.html
+++ b/map.html
@@ -32,7 +32,7 @@
   <div class="slider-container">
     <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
     <ul class="slider">
-      <li class="slide active"><img src="images/msv.jpg" alt="The main entrance to MSV"></li>
+      <li class="slide"><img src="images/msv.jpg" alt="The main entrance to MSV"></li>
       <li class="slide"><img src="images/msv2.jpg" alt="The front lawn of MSV"></li>
       <li class="slide"><img src="images/fowler.jpg" alt="Fowler Hall of MSV"></li>
     </ul>
