--- a/map.html
+++ b/map.html
@@ -6,8 +6,9 @@
   <title>Google Maps API</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
-  <script src="js/slider.js" defer></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="js/slider.js" defer></script>
+  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIWGeBWMq1N3gGBBltdTBS1D953KC2S0o&callback=initMap" defer></script>
 </head>
 
 <body id="map-page">
@@ -40,9 +41,5 @@
     </div>
   </section>
 
-  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIWGeBWMq1N3gGBBltdTBS1D953KC2S0o&callback=initMap"></script>
-  <script>
-
-</script>
 </body>
 </html>
