--- a/map.html
+++ b/map.html
@@ -31,13 +31,13 @@
   <section class="slideshow">
     <h1>McCormick Student Village</h1>
     <div class="slider-container">
-      <button class="prev" onclick="prevSlide()">&#10094;</button>
+      <button class="prev">&#10094;</button>
       <ul class="slider">
         <li class="slide active"><img src="images/msv.jpg" alt="The main entrance to MSV"></li>
         <li class="slide"><img src="images/msv2.jpg" alt="The front lawn of MSV"></li>
         <li class="slide"><img src="images/fowler.jpg" alt="Fowler Hall of MSV"></li>
       </ul>
-      <button class="next" onclick="nextSlide()">&#10095;</button>
+      <button class="next">&#10095;</button>
     </div>
   </section>
 
