adding map file
this is my map page

this is my slideshow page

--- a/map.html
+++ b/map.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="js/slider.js" defer></script>
-  <script async src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" defer></script>
+  <script async src="https://maps.googleapis.com/maps/api/js?AIzaSyBM1F-BpX660SBK3-Vw9O9f7AEvTAIH8rI&callback=initMap" defer></script>
 </head>
 
 <body id="map-page">
